testdata/baselines/reference/submodule/conformance/malformedTags.errors.txt
myFile02.js(4,10): error TS8010: Type annotations can only be used in TypeScript files.


==== myFile02.js (1 errors) ====
    /**
     * Checks if `value` is classified as an `Array` object.
     *
     * @type Function
             ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    var isArray = Array.isArray;
    